--- a/styles/style.css
+++ b/styles/style.css
@@ -8,15 +8,23 @@ basic setup
     text-decoration: none;
     font-family: 'Work Sans', sans-serif;
 }
+
 .container {
     max-width: 1140px;
     margin: 0 auto;
 }
 
-.section-description {
+.section-description,
+.info-description {
     font-weight: 400;
     font-size: 16px;
     color: #727272;
+}
+
+.section-title {
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
 }
 
 .btn-primary {
@@ -30,9 +38,10 @@ basic setup
 }
 
 /* nav-bar style start */
-header{
+header {
     background: rgba(255, 144, 14, 0.1);
 }
+
 .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -59,25 +68,207 @@ header{
 }
 
 /* banner section start */
-.banner{
+.banner {
     text-align: center;
     margin-top: 100px;
 }
+
 .banner-title {
     font-weight: 700;
     font-size: 64px;
     color: #131313;
 }
-.banner .section-description{
+
+.banner .section-description {
     margin: 30px 0 30px 0;
 }
-.banner .btn-primary{
+
+.banner .btn-primary {
     margin-bottom: 50px;
 }
+
 .banner img {
     width: 1140px;
     height: 700px;
     object-fit: cover;
     padding-bottom: 45px;
 }
+
 /* quick list section */
+.quick-list {
+    margin-top: 85px;
+}
+
+.quick-list-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.quick-list-img {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+    margin-right: 73px;
+}
+
+.quick-list-img img {
+    width: 342px;
+    height: 342px;
+    border-radius: 8px;
+}
+
+.quick-list-title {
+    font-weight: 700;
+    font-size: 45px;
+    color: #FF900E;
+    margin-bottom: 24px;
+}
+
+.quick-list-info .section-description {
+    margin-bottom: 32px;
+}
+
+.span1 {
+    font-weight: 500;
+    font-size: 45px;
+    color: #727272;
+}
+
+.span2 {
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
+}
+
+/* feature section start */
+.feature {
+    margin-top: 130px;
+}
+
+.feature-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.feature-info {
+    margin-right: 50px;
+}
+
+.feature-info .section-description {
+    margin: 24px 0 30px 0;
+}
+
+.info-deatils {
+    height: 171px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    padding-left: 30px;
+}
+
+.info-title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #131313;
+}
+
+.feature-img img {
+    width: 600px;
+    height: 982px;
+    object-fit: cover;
+}
+
+.experiance {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    margin-top: -130px;
+    margin-left: 180px;
+}
+
+.experiance p {
+    width: 242px;
+    height: 100px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 65px;
+    text-align: center;
+    color: #ffffff;
+    background-color: #FF900E;
+    padding: 50px 50px;
+}
+
+.experiance span {
+    font-weight: 500;
+    font-size: 25px;
+}
+
+/* fact style start */
+.fact {
+    margin-top: 100px;
+}
+.fact .section-title{
+    margin-bottom: 24px;
+}
+.fact-item{
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-around;
+}
+.facts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    height: 169px;
+    width: 136px;
+    padding: 45px 35px;
+}
+.facts:hover{
+    border: 1px solid #07a3e0;
+    box-shadow: 0px 4px 30px rgba(21, 20, 20, 0.06);
+    transition: 0.5s ease-in-out;
+}
+.facts img {
+    height: 45px;
+    width: 45px;
+}
+
+.facts-title {
+    font-weight: 600;
+    font-size: 45px;
+    color: #424242;
+}
+
+.facts-description {
+    font-weight: 600;
+    font-size: 20px;
+    color: #727272;
+}
+/* sponsere section start */
+.sponser{
+    margin-top: 100px;
+}
+.section-info{
+    text-align: center;
+}
+.sponser-img{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+}
+.sponser-img img{
+    height: 50px;
+    width: 165px;
+}
