--- a/styles/style.css
+++ b/styles/style.css
@@ -88,8 +88,8 @@ header {
 }
 
 .banner img {
-    width: 1140px;
-    /* width: 100%; */
+    /* width: 1140px; */
+    width: 100%;
     height: 700px;
     object-fit: cover;
     padding-bottom: 45px;
